--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 	http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion> 
-  <groupId>like.programmming</groupId> 
+  <groupId>like.programming</groupId> 
   <artifactId>spring01</artifactId> 
   <version>1.0</version>
 </project>
