--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,18 @@
   <groupId>like.programming</groupId> 
   <artifactId>spring01</artifactId> 
   <version>1.0</version>
+  
+  <dependencies>
+  	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-core</artifactId>
+    	<version>5.0.7.RELEASE</version>
+	</dependency>
+	<dependency>
+   		<groupId>org.springframework</groupId>
+    	<artifactId>spring-context</artifactId>
+    	<version>5.0.7.RELEASE</version>
+	</dependency>
+  </dependencies>
+
 </project>
